# epoll_reactor

./: CMakeLists.txt  README.md  client.cpp  server.cpp
include/: epoll_demultiplexer.h  event.h  event_demultiplexer.h  event_handler.h  listen_handler.h  reactor.h  socket_handler.h
lib/: epoll_demultiplexer.cpp  listen_handler.cpp  reactor.cpp  socket_handler.cpp
src/: epoll_demultiplexer.cpp
